--- a/generic.html
+++ b/generic.html
@@ -47,7 +47,15 @@
 									<h1>Hi, my name is<br />
 									Joshua Park</h1>
 									<p>
-										I am a Georgia Tech student 
+										
+									</p>
+								</header>
+								<div class="image left"><img src="images/profileMain.jpg" alt="" 
+									height = "465"
+									/>
+								</div>
+								<p>
+									I am a Georgia Tech student 
 										aiming to become a Full Stack Web Developer. 
 										The main appeal of becoming a web developer is 
 										that I can delve into a life-long journey of 
@@ -60,11 +68,10 @@
 										there are rules of knowing the planes of the face and 
 										how the language of code works. However, we can create 
 										thousands of different looks and websites within those rules.
-									</p>
-								</header>
-								<div class="image main"><img src="profileMain.jpg" alt="" /></div>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Curabitur sapien risus, commodo eget turpis at, elementum convallis enim turpis, lorem ipsum dolor sit amet nullam.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus. Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum.</p>
+								</p>
+								<p>
+									
+								</p>
 							</section>
 
 					</div>
@@ -93,11 +100,6 @@
 							</form>
 						</section>
 						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
 							<section>
 								<h3>Phone</h3>
 								<p><a href="#">(000) 000-0000</a></p>
