--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
+							<li class="active"><a href="index.html">Front Page</a></li>
 							<li><a href="generic.html">About Me</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
@@ -55,12 +55,10 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<span class="date">Welcome!</span>
+									<p>I am a Full Stack Developer currently specializing in Front-End Development.<br />
+									My relationship with Web Development started from my passion for illustration and<br />
+									painting at a young age. On this website, you'll discover my works and blog posts.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
@@ -186,12 +184,8 @@
 						</section>
 						<section class="split contact">
 							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">jpark3058@gatech.edu</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
