--- a/generic.html
+++ b/generic.html
@@ -25,7 +25,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">This is Massively</a></li>
+							<li><a href="index.html">Front Page</a></li>
 							<li class="active"><a href="generic.html">About Me</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
@@ -101,12 +101,8 @@
 						</section>
 						<section class="split contact">
 							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
 								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
+								<p><a href="#">jpark3058@gatech.edu</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
