html and added .jpg

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									My relationship with Web Development started from my passion for illustration and<br />
 									painting at a young age. On this website, you'll discover my works and blog posts.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="images/frontProfile.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">Full Story</a></li>
 								</ul>
@@ -70,9 +70,9 @@
 							<section class="posts">
 								<article>
 									<header>
-										<span class="date">April 24, 2017</span>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<span class="date">July 13, 2022</span>
+										<h2><a href="#">Robofriends<br />
+										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
