--- a/index.html
+++ b/index.html
@@ -37,15 +37,13 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">Front Page</a></li>
+							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="generic.html">About Me</a></li>
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/joshuapark2" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -60,11 +58,21 @@
 									My relationship with Web Development started from my passion for illustration and<br />
 									painting at a young age. On this website, you'll discover my works and blog posts.</p>
 								</header>
-								<a href="#" class="image fit"><img src="images/frontProfile.jpg" alt="" /></a>
+								<a href="#" class="image fit"><img src="images/frontProfile.jpg" alt="" 
+									/></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="generic.html" class="button large">Full Story</a></li>
 								</ul>
 							</article>
+						
+						<!-- Experience -->
+
+						<section class="post featured">
+							<h3>Experience</h3>
+							<p>
+								Technologies I've worked with:
+							</p>
+						</section>
 
 						<!-- Posts -->
 							<section class="posts">
@@ -141,22 +149,6 @@
 									</ul>
 								</article>
 							</section>
-
-						<!-- Footer -->
-							<footer>
-								<div class="pagination">
-									<!--<a href="#" class="previous">Prev</a>-->
-									<a href="#" class="page active">1</a>
-									<a href="#" class="page">2</a>
-									<a href="#" class="page">3</a>
-									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
-									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
-								</div>
-							</footer>
-
 					</div>
 
 				<!-- Footer -->
@@ -191,9 +183,7 @@
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/joshuapark2" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
