icons changes html

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin-square"><span class="label">Linkedin</span></a></li>
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.linkedin.com/in/joshuapark1309/" target="_blank" class="icon brands fa-linkedin-square"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/joshuapark2" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
@@ -179,12 +178,12 @@
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">jpark3058@gatech.edu</a></p>
+								<p><a href="jpark3058@gatech.edu">jpark3058@gatech.edu</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="#" target="_blank" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://www.linkedin.com/in/joshuapark1309/" target="_blank" class="icon brands fa-linkedin-square"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/joshuapark2" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
