--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 									My relationship with Web Development started from my passion for illustration and<br />
 									painting at a young age. On this website, you'll discover my works and blog posts.</p>
 								</header>
-								<a href="#" class="image fit"><img src="images/frontProfile.jpg" alt="" 
+								<a class="image fit"><img src="images/frontProfile.jpg" alt="" 
 									/></a>
 								<ul class="actions special">
 									<li><a href="generic.html" class="button large">Full Story</a></li>
@@ -71,7 +71,16 @@
 						<section class="post featured">
 							<h3>Experience</h3>
 							<p>
-								Technologies I've worked with:
+								<center>Technologies I've worked with:</center>
+								<img src="images/html.png" alt="" width="90" height="auto" style="padding: 10px;">
+								<img src="images/css.png" alt="" width="90" height="auto" style="padding: 10px;">
+								<img src="images/js.png" alt="" width="90" height="auto" style="padding: 10px;"> <br>
+								<img src="images/java.png" alt="" width="90" height="auto" style="padding: 10px;">
+								<img src="images/python.png" alt="" width="90" height="auto" style="padding: 10px;">
+								<img src="images/js.png" alt="" width="90" height="auto" style="padding: 10px;"> <br>
+								<img src="images/jquery.png" alt="" width="90" height="auto" style="padding: 10px;"> 
+								<img src="images/node.png" alt="" width="90" height="auto" style="padding: 10px;">
+								<img src="images/github.png" alt="" width="90" height="auto" style="padding: 10px;">
 							</p>
 						</section>
 
@@ -155,7 +164,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+							<form method="post" action="contactForm.php">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Name</label>
@@ -178,7 +187,7 @@
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
-								<p><a href="jpark3058@gatech.edu">jpark3058@gatech.edu</a></p>
+								<p><a href="www.jpark3058@gatech.edu">jpark3058@gatech.edu</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
