index and images

--- a/index.html
+++ b/index.html
@@ -77,9 +77,10 @@
 								<img src="images/js.png" alt="" width="90" height="auto" style="padding: 10px;"> <br>
 								<img src="images/java.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/python.png" alt="" width="90" height="auto" style="padding: 10px;">
-								<img src="images/js.png" alt="" width="90" height="auto" style="padding: 10px;"> <br>
+								<img src="images/csharp.png" alt="" width="90" height="auto" style="padding: 10px;"> <br>
 								<img src="images/jquery.png" alt="" width="90" height="auto" style="padding: 10px;"> 
 								<img src="images/node.png" alt="" width="90" height="auto" style="padding: 10px;">
+								<img src="images/php.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/github.png" alt="" width="90" height="auto" style="padding: 10px;">
 							</p>
 						</section>
@@ -163,6 +164,10 @@
 
 				<!-- Footer -->
 					<footer id="footer">
+						<!-- 
+							github pages is a static platform which doesn't support php
+							However, Save this block of code for dynamic sites in the future
+							Source: https://stackoverflow.com/questions/27672315/do-github-pages-support-php
 						<section>
 							<form method="post" action="contactForm.php">
 								<div class="fields">
@@ -184,10 +189,11 @@
 								</ul>
 							</form>
 						</section>
+						-->
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
-								<p><a href="www.jpark3058@gatech.edu">jpark3058@gatech.edu</a></p>
+								<p><a href="joshuapark1309@gmail.com" target="_blank">jpark3058@gatech.edu</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
