fixed href to email and added react png

--- a/index.html
+++ b/index.html
@@ -77,10 +77,11 @@
 								<img src="images/js.png" alt="" width="90" height="auto" style="padding: 10px;"> <br>
 								<img src="images/java.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/python.png" alt="" width="90" height="auto" style="padding: 10px;">
-								<img src="images/csharp.png" alt="" width="90" height="auto" style="padding: 10px;"> <br>
-								<img src="images/jquery.png" alt="" width="90" height="auto" style="padding: 10px;"> 
+								<img src="images/csharp.png" alt="" width="90" height="auto" style="padding: 10px;">
+								<img src="images/php.png" alt="" width="90" height="auto" style="padding: 10px;"> <br>
+								<img src="images/react.png" alt="" width="90" height="auto" style="padding: 10px;">
+								<img src="images/jquery.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/node.png" alt="" width="90" height="auto" style="padding: 10px;">
-								<img src="images/php.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/github.png" alt="" width="90" height="auto" style="padding: 10px;">
 							</p>
 						</section>
@@ -193,7 +194,7 @@
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
-								<p><a href="joshuapark1309@gmail.com" target="_blank">jpark3058@gatech.edu</a></p>
+								<p><a href="mailto:joshuapark1309@gmail.com" target="_blank">joshuapark1309@gmail.edu</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
