--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE HTML>
 <!--
-	Massively by HTML5 UP
-	Edited by Joshua Jihoon Park
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Joshua Jihoon Park
 -->
 <html>
 	<head>
-		<script src="https://use.fontawesome.com/c62f70ed29.js"></script>
+		<script src="https://kit.fontawesome.com/406fb38f48.js" crossorigin="anonymous"></script>
 		<title>Joshua Park Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
@@ -43,9 +40,9 @@
 							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="https://www.linkedin.com/in/joshuapark1309/" target="_blank" class="icon brands fa-linkedin-square"><span class="label">Linkedin</span></a></li>
+							<li><a href="https://www.linkedin.com/in/joshuapark1309/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/joshuapark2" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-						</ul>
+							<li><a href="https://github.com/joshuapark2" target="_blank" class="fa fa-link"></a></li>
 					</nav>
 
 				<!-- Main -->
@@ -194,7 +191,7 @@
 						<section class="split contact">
 							<section>
 								<h3>Email</h3>
-								<p><a href="mailto:joshuapark1309@gmail.com" target="_blank">joshuapark1309@gmail.edu</a></p>
+								<p><a href="mailto:joshuapark1309@gmail.com" target="_blank">joshuapark1309@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
