--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/joshuapark1309/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/joshuapark2" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://github.com/joshuapark2" target="_blank" class="fa fa-link"></a></li>
+							<li><a href="https://docs.google.com/document/d/1p1un83i0TpFUB_ncoDJWvsXdvM_hMlBs_uL7KxNpI0U/edit?usp=sharing" target="_blank" class="icon brands fa-gg"><span class="label">Resume</span></a></li>
+							
 					</nav>
 
 				<!-- Main -->
@@ -59,7 +60,7 @@
 								<a class="image fit"><img src="images/frontProfile.jpg" alt="" 
 									/></a>
 								<ul class="actions special">
-									<li><a href="generic.html" class="button large">Full Story</a></li>
+									<li><a href="https://docs.google.com/document/d/1p1un83i0TpFUB_ncoDJWvsXdvM_hMlBs_uL7KxNpI0U/edit?usp=sharing" target="_blank" class="button large">Resume</a></li>
 								</ul>
 							</article>
 						
@@ -196,8 +197,9 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/joshuapark1309/" target="_blank" class="icon brands fa-linkedin-square"><span class="label">Linkedin</span></a></li>
+									<li><a href="https://www.linkedin.com/in/joshuapark1309/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/joshuapark2" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://docs.google.com/document/d/1p1un83i0TpFUB_ncoDJWvsXdvM_hMlBs_uL7KxNpI0U/edit?usp=sharing" target="_blank" class="icon brands fa-gg"><span class="label">Resume</span></a></li>
 								</ul>
 							</section>
 						</section>
