adding robofriends to portfolio

--- a/index.html
+++ b/index.html
@@ -89,13 +89,19 @@
 								<article>
 									<header>
 										<span class="date">July 13, 2022</span>
-										<h2><a href="#">Robofriends<br />
+										<h2><a>Robofriends<br />
+										<img src="images/html.png" alt="" width="60" height="auto" style="padding: 10px;">
+										<img src="images/css.png" alt="" width="60" height="auto" style="padding: 10px;">
+										<img src="images/js.png" alt="" width="60" height="auto" style="padding: 10px;">
+										<img src="images/react.png" alt="" width="60" height="auto" style="padding: 10px;">
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a class="image fit"><img src="images/robofriends/logo.png" alt="" style="width:400px;height:auto;"/></a>
+									<p> Robofriends utilizes the React framework with the purpose of exploring concepts
+										such as dynamic programming, one way data flow, and components.
 									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
+										<li><a href="https://joshuapark2.github.io/robofriends/" class="button" target="_blank">Visit Project</a></li>
+										<li><a href="https://github.com/joshuapark2/robofriends" class="button" target="_blank">Visit Repo</a></li>
 									</ul>
 								</article>
 								<article>
