--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									<p> 
 									<ul class="actions special">
 										<li><a href="https://joshuapark2.itch.io/snake" class="button" target="_blank">Play Game</a></li>
-										<li><a href="https://github.com/joshuapark2/snakeGame" class="button" target="_blank">Visit Repo</a></li>
+										<li><a href="https://joshuapark2.itch.io/snake?secret=mtBfNNQ5qSwhryvtRjQqyPU4Y9M" class="button" target="_blank">Visit Repo</a></li>
 									</ul>
 								</article>
 								<article>
