--- a/index.html
+++ b/index.html
@@ -57,8 +57,6 @@
 									My relationship with Web Development started from my passion for illustration and<br />
 									painting at a young age. On this website, you'll discover my works and blog posts.</p>
 								</header>
-								<a class="image fit"><img src="images/frontProfile.jpg" alt="" 
-									/></a>
 								<ul class="actions special">
 									<li><a href="https://docs.google.com/document/d/1p1un83i0TpFUB_ncoDJWvsXdvM_hMlBs_uL7KxNpI0U/edit?usp=sharing" target="_blank" class="button large">Resume</a></li>
 								</ul>
@@ -118,28 +116,33 @@
 								</article>
 								<article>
 									<header>
+										<span class="date">Aug 18, 2022</span>
+										<h2><a>chatbot<br />
+											<img src="images/html.png" alt="" width="60" height="auto" style="padding: 10px;">
+											<img src="images/css.png" alt="" width="60" height="auto" style="padding: 10px;">
+											<img src="images/js.png" alt="" width="60" height="auto" style="padding: 10px;">
+											<img src="images/node.png" alt="" width="75" height="auto" style="padding: 10px;">										</a></h2>
+									</header>
+									<a class="image fit"><img src="images/chatbot.png" alt="" style="width:255px;height:auto;"/></a>
+									<p> Interactive chat system build with HTML, CSS, Javascript, and Node.js
+									<ul class="actions special">
+										<li><a href="https://joshuapark2.github.io/chatbot/" class="button" target="_blank">Visit Project</a></li>
+										<li><a href="https://github.com/joshuapark2/chatbot" class="button" target="_blank">Visit Repo</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">Dec 12, 2021</span>
 										<h2><a>Snake<br />
 											<img src="images/csharp.png" alt="" width="90" height="auto" style="padding: 10px;">
 										</a></h2>
 									</header>
-									<a class="image fit"><img src="images/snakegif.gif" alt="" style="width:400px;height:auto;"/></a>
-									<p> 
+									<a class="image fit"><img src="images/snakegif.gif" alt="" style="width:450px;height:auto;"/></a>
+									<p> Classic arcade game snake <br>
+										&nbsp
 									<ul class="actions special">
 										<li><a href="https://joshuapark2.itch.io/snake?secret=mtBfNNQ5qSwhryvtRjQqyPU4Y9M" class="button" target="_blank">Play Game</a></li>
 										<li><a href="https://github.com/joshuapark2/snakeGame" class="button" target="_blank">Visit Repo</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 							</section>
