updated website portfolio

--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="generic.html">About Me</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/joshuapark1309/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/joshuapark2" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://docs.google.com/document/d/1p1un83i0TpFUB_ncoDJWvsXdvM_hMlBs_uL7KxNpI0U/edit?usp=sharing" target="_blank" class="icon brands fa-gg"><span class="label">Resume</span></a></li>
-							
+							<li><a href="https://docs.google.com/document/d/1epnnZgo5SG1-RZY8sx3nbm3H3iHcHWXw7Kx-OKA2ggE/edit?usp=sharing" target="_blank" class="icon brands fa-gg"><span class="label">Resume</span></a></li>
 					</nav>
 
 				<!-- Main -->
@@ -55,10 +53,10 @@
 									<span class="date">Welcome!</span>
 									<p>I am a Full Stack Developer currently specializing in Front-End Development.<br />
 									My relationship with Web Development started from my passion for illustration and<br />
-									painting at a young age. On this website, you'll discover my works and blog posts.</p>
+									painting at a young age. On this website, you'll discover my work experience and personal projects.</p>
 								</header>
 								<ul class="actions special">
-									<li><a href="https://docs.google.com/document/d/1p1un83i0TpFUB_ncoDJWvsXdvM_hMlBs_uL7KxNpI0U/edit?usp=sharing" target="_blank" class="button large">Resume</a></li>
+									<li><a href="https://docs.google.com/document/d/1epnnZgo5SG1-RZY8sx3nbm3H3iHcHWXw7Kx-OKA2ggE/edit?usp=sharing" target="_blank" class="button large">Resume</a></li>
 								</ul>
 							</article>
 						
@@ -67,10 +65,15 @@
 						<section class="post featured">
 							<h3>Experience</h3>
 							<p>
+								<center>Work Experience:</center>
+								<img src="images/ICF.png" alt="" width="130" height="auto" style="padding: 10px;">
+							</p>
+							<p>
 								<center>Technologies I've worked with:</center>
 								<img src="images/html.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/css.png" alt="" width="90" height="auto" style="padding: 10px;">
-								<img src="images/js.png" alt="" width="90" height="auto" style="padding: 10px;"> <br>
+								<img src="images/js.png" alt="" width="90" height="auto" style="padding: 10px;">
+								<img src="images/figma.png" alt="" width="80" height="auto" style="padding: 10px;"> <br>
 								<img src="images/java.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/python.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/csharp.png" alt="" width="90" height="auto" style="padding: 10px;">
@@ -84,6 +87,58 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<article>
+									<header>
+										<span class="date">January, 2023</span>
+										<h2><a>ICF Experience Enhancement<br />
+										<img src="images/html.png" alt="" width="60" height="auto" style="padding: 10px;">
+										<img src="images/css.png" alt="" width="60" height="auto" style="padding: 10px;">
+										<img src="images/js.png" alt="" width="60" height="auto" style="padding: 10px;">
+										<img src="images/react.png" alt="" width="60" height="auto" style="padding: 10px;">
+										<img src="images/node.png" alt="" width="60" height="auto" style="padding: 10px;">
+										</a></h2>
+									</header>
+									<a class="image fit"><img src="images/ICFDemo.png" alt="" style="width:600px;height:auto;"/></a>
+									<p> Showcased dynamic loops and nested data structures, seamlessly integrated additional events to elevate user experience,
+										while optimizing page loading and data retrieval using Next.js. Visually attractive interfaces were created using React and SCSS.
+									<ul class="actions special">
+										<li><a href="https://649fca7ef8f8e602afff46c3--unrivaled-yeot-503c2b.netlify.app/" class="button" target="_blank">Visit Project</a></li>
+										<li><a href="https://joshuapark2.github.io/ICF-Demo/" class="button" target="_blank">Visit Repo</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">January - May, 2023</span>
+										<h2><a>GT Food Finder<br />
+										<img src="images/figma.png" alt="" width="60" height="auto" style="padding: 10px;">
+										</a></h2>
+									</header>
+									<a class="image fit"><img src="images/GTFoodFinder.png" alt="" style="width:155px;height:auto;"/></a>
+									<p> An intuitive nutritional app with goal tracking and a social forum, using human-computer interaction
+										principles and user-centered design. Employed Figma for evidence-based prototyping and design, effectively communicating
+										concepts and enhancing the user experience. Led user resarch for iterative improvements.
+									<ul class="actions special">
+										<li><a href="https://www.figma.com/proto/6wj1s6jMMSDvARQcUPe5b3/P4-Prototype?type=design&t=5IHErr1qqTRIZ5u9-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=120%3A808&node-id=120-808&mode=design" class="button" target="_blank">Visit Project</a></li>
+										<li><a href="https://www.figma.com/file/6wj1s6jMMSDvARQcUPe5b3/P4-Prototype?type=design&mode=design&t=l9QnC1fQYKq45OpP-1" class="button" target="_blank">Visit Repo</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<header>
+										<span class="date">January - May, 2023</span>
+										<h2><a>LingoMap<br />
+										<img src="images/figma.png" alt="" width="60" height="auto" style="padding: 10px;">
+										</a></h2>
+									</header>
+									<a class="image fit"><img src="images/LingoMap.png" alt="" style="width:200px;height:auto;"/></a>
+									<p> A contextual language learning app, applying learner-centered design. Integrated map-based contextualization, 
+										categorized lesson plans, and guided dialogues with video support. Utilized Figma for prototyping and 
+										incorporated user feedback for an optimized user experience and improved learning outcomes.
+									<ul class="actions special">
+										<li><a href="https://www.figma.com/proto/PEY0Pl3fgyDbP7wX9iVamc/Language-Learning?type=design&t=7WlgmQ8mnKuWzbpX-1&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=2%3A68&show-proto-sidebar=1&node-id=2-68&mode=design" class="button" target="_blank">Visit Project</a></li>
+										<li><a href="https://www.figma.com/file/PEY0Pl3fgyDbP7wX9iVamc/Language-Learning?type=design&node-id=0%3A1&mode=design&t=AKzy5PK2nKb90KkB-1" class="button" target="_blank">Visit Repo</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<span class="date">July 13, 2022</span>
@@ -100,18 +155,6 @@
 									<ul class="actions special">
 										<li><a href="https://joshuapark2.github.io/robofriends/" class="button" target="_blank">Visit Project</a></li>
 										<li><a href="https://github.com/joshuapark2/robofriends" class="button" target="_blank">Visit Repo</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">April 22, 2017</span>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">Full Story</a></li>
 									</ul>
 								</article>
 								<article>
@@ -194,7 +237,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Jpark Portfolio </li></ul>
 					</div>
 
 			</div>
