updating ICF Experience Enhancement Repo - fixed

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 										while optimizing page loading and data retrieval using Next.js. Visually attractive interfaces were created using React and SCSS.
 									<ul class="actions special">
 										<li><a href="https://649fca7ef8f8e602afff46c3--unrivaled-yeot-503c2b.netlify.app/" class="button" target="_blank">Visit Project</a></li>
-										<li><a href="https://joshuapark2.github.io/ICF-Demo/" class="button" target="_blank">Visit Repo</a></li>
+										<li><a href="https://github.com/joshuapark2/joshuapark2.github.io" class="button" target="_blank">Visit Repo</a></li>
 									</ul>
 								</article>
 								<article>
