--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 					<div id="intro">
 						<h1>This is<br />
 						Joshua Jihoon Park</h1>
-						<p>Full Stack Developer, Digital Illustrator, and Writer<br />
-						Senior at the Georgia Institute of Technology</p>
+						<p>Software Engineer</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -41,7 +40,7 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/joshuapark1309/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/joshuapark2" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://docs.google.com/document/d/1epnnZgo5SG1-RZY8sx3nbm3H3iHcHWXw7Kx-OKA2ggE/edit?usp=sharing" target="_blank" class="icon brands fa-gg"><span class="label">Resume</span></a></li>
+							<li><a href="https://docs.google.com/document/d/15JKFzyh_GfL0YuT5U0AYa38jNGlGRDwJX2JD-gozYPA/edit?usp=sharing" target="_blank" class="icon brands fa-gg"><span class="label">Resume</span></a></li>
 					</nav>
 
 				<!-- Main -->
@@ -51,12 +50,12 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date">Welcome!</span>
-									<p>I am a Full Stack Developer currently specializing in Front-End Development.<br />
-									My relationship with Web Development started from my passion for illustration and<br />
-									painting at a young age. On this website, you'll discover my work experience and personal projects.</p>
+									<p>I am a Software Engineer, passionate about creating scalable and maintainable web applications.
+										What draws me to software engineering is the continuous learning process—honing technical skills across front-end and back-end development while solving complex problems daily.<br />
+									</p>
 								</header>
 								<ul class="actions special">
-									<li><a href="https://docs.google.com/document/d/1epnnZgo5SG1-RZY8sx3nbm3H3iHcHWXw7Kx-OKA2ggE/edit?usp=sharing" target="_blank" class="button large">Resume</a></li>
+									<li><a href="https://docs.google.com/document/d/15JKFzyh_GfL0YuT5U0AYa38jNGlGRDwJX2JD-gozYPA/edit?usp=sharing" target="_blank" class="button large">Resume</a></li>
 								</ul>
 							</article>
 						
@@ -73,12 +72,16 @@
 								<img src="images/html.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/css.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/js.png" alt="" width="90" height="auto" style="padding: 10px;">
-								<img src="images/figma.png" alt="" width="80" height="auto" style="padding: 10px;"> <br>
-								<img src="images/java.png" alt="" width="90" height="auto" style="padding: 10px;">
+								<img src="images/figma.png" alt="" width="80" height="auto" style="padding: 10px;"> 
+								<img src="images/java.png" alt="" width="90" height="auto" style="padding: 10px;"><br>
 								<img src="images/python.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/csharp.png" alt="" width="90" height="auto" style="padding: 10px;">
-								<img src="images/php.png" alt="" width="90" height="auto" style="padding: 10px;"> <br>
+								<img src="images/php.png" alt="" width="90" height="auto" style="padding: 10px;"> 
 								<img src="images/react.png" alt="" width="90" height="auto" style="padding: 10px;">
+								<img src="images/typescript.png" alt="" width="90" height="auto" style="padding: 10px;"> <br>
+								<img src="images/nextjs.png" alt="" width="90" height="auto" style="padding: 10px;">
+								<img src="images/tailwind.webp" alt="" width="90" height="auto" style="padding: 10px;">
+								<img src="images/aws.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/jquery.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/node.png" alt="" width="90" height="auto" style="padding: 10px;">
 								<img src="images/github.png" alt="" width="90" height="auto" style="padding: 10px;">
@@ -229,7 +232,7 @@
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/joshuapark1309/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/joshuapark2" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://docs.google.com/document/d/1p1un83i0TpFUB_ncoDJWvsXdvM_hMlBs_uL7KxNpI0U/edit?usp=sharing" target="_blank" class="icon brands fa-gg"><span class="label">Resume</span></a></li>
+									<li><a href="https://docs.google.com/document/d/15JKFzyh_GfL0YuT5U0AYa38jNGlGRDwJX2JD-gozYPA/edit?usp=sharing" target="_blank" class="icon brands fa-gg"><span class="label">Resume</span></a></li>
 								</ul>
 							</section>
 						</section>
