--- a/generic.html
+++ b/generic.html
@@ -31,7 +31,7 @@
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/joshuapark1309/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 							<li><a href="https://github.com/joshuapark2" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="https://docs.google.com/document/d/1p1un83i0TpFUB_ncoDJWvsXdvM_hMlBs_uL7KxNpI0U/edit?usp=sharing" target="_blank" class="icon brands fa-gg"><span class="label">Resume</span></a></li>
+							<li><a href="https://docs.google.com/document/d/15JKFzyh_GfL0YuT5U0AYa38jNGlGRDwJX2JD-gozYPA/edit?usp=sharing" target="_blank" class="icon brands fa-gg"><span class="label">Resume</span></a></li>
 						</ul>
 					</nav>
 
@@ -49,19 +49,7 @@
 									</p>
 								</header>
 								<p>
-									I am a Georgia Tech student 
-										aiming to become a Full Stack Web Developer. 
-										The main appeal of becoming a web developer is 
-										that I can delve into a life-long journey of 
-										learning the technical skills of frontend/backend 
-										and engaging with different problems every day. 
-										Similarly, as someone with an artistic background, 
-										technical and problem-solving abilities are needed to 
-										create a coherent painting. Taking portrait painting as
-										an example and relating to the field of web development, 
-										there are rules of knowing the planes of the face and 
-										how the language of code works. However, we can create 
-										thousands of different looks and websites within those rules.
+									I am a Software Engineer with a strong focus on front-end development, passionate about creating scalable and maintainable web applications. What draws me to software engineering is the continuous learning process—honing technical skills across front-end and back-end development while solving complex problems daily.
 								</p>
 								<p>
 									
@@ -82,7 +70,7 @@
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/joshuapark1309/" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/joshuapark2" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://docs.google.com/document/d/1p1un83i0TpFUB_ncoDJWvsXdvM_hMlBs_uL7KxNpI0U/edit?usp=sharing" target="_blank" class="icon brands fa-gg"><span class="label">Resume</span></a></li>
+									<li><a href="https://docs.google.com/document/d/15JKFzyh_GfL0YuT5U0AYa38jNGlGRDwJX2JD-gozYPA/edit?usp=sharing" target="_blank" class="icon brands fa-gg"><span class="label">Resume</span></a></li>
 								</ul>
 							</section>
 						</section>
